--- a/janissary/reports/js/package.json
+++ b/janissary/reports/js/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.2.2",
     "babel-loader": "^8.0.5",
     "chart.js": "^2.7.3",
+    "chartjs-plugin-colorschemes": "^0.3.0",
     "jquery": "^3.3.1"
   }
 }
