--- a/janissary/reports/js/package.json
+++ b/janissary/reports/js/package.json
@@ -6,18 +6,30 @@
   "author": "Jeff McBride",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "babel-loader": "^8.0.5",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@material-ui/core": "^3.9.2",
     "chart.js": "^2.7.3",
     "chartjs-plugin-colorschemes": "^0.3.0",
-    "jquery": "^3.3.1"
+    "css-loader": "^2.1.0",
+    "jquery": "^3.3.1",
+    "react": "^16.8.1",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.8.1",
+    "react-tabs": "^3.0.0",
+    "style-loader": "^0.23.1"
   }
 }
