--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: install with development requirements
+      run: |
+        pip install -e .[dev]
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,3 +40,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Test janissary report
+      run: |
+        janissary report logfile.aoe2record logfile_report.html
