--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,6 +40,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    - name: Test janissary report
+    - name: Generate Janissary report
       run: |
-        janissary report test/data/example_v5.8.aoe2record index.html
+        mkdir -p docs
+        janissary report test/data/example_v5.8.aoe2record docs/index.html
