--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "master" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -42,3 +42,12 @@ jobs:
       run: |
         mkdir -p docs
         janissary report test/data/example_v5.8.aoe2record docs/index.html && pwd && ls -la docs/
+
+    - name: Commit and push report to docs/
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add docs/index.html
+        git commit -m "Update janissary report" || echo "No changes to commit"
+        git push
+
