--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -87,12 +87,14 @@ jobs:
 
       - name: Prepare /docs directory for GitHub Pages
         run: |
-          rm -rf docs  # Clean up existing docs if any
+          rm -rf docs  # Clean existing docs
           mkdir -p docs
           cp -r janissary/reports/js/dist/* docs/
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs 
+      - name: Commit and push /docs folder
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add docs
+          git commit -m "Update GitHub Pages content in /docs" || echo "No changes to commit"
+          git push origin master 
