--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -90,6 +90,7 @@ jobs:
           rm -rf docs  # Clean existing docs
           mkdir -p docs
           cp -r janissary/reports/js/dist/* docs/
+          cp janissary/reports/js/public/index.html docs/index.html
 
       - name: Commit and push /docs folder
         run: |
@@ -97,4 +98,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add docs
           git commit -m "Update GitHub Pages content in /docs" || echo "No changes to commit"
-          git push origin master 
+          git push origin master
