--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -91,6 +91,7 @@ jobs:
           mkdir -p docs
           cp -r janissary/reports/js/dist/* docs/
           cp janissary/reports/js/public/index.html docs/index.html
+          cp backend_output/reports/js/public/devdata.json docs/devdata.json
 
       - name: Commit and push /docs folder
         run: |
@@ -98,4 +99,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add docs
           git commit -m "Update GitHub Pages content in /docs" || echo "No changes to commit"
-          git push origin master
+          git push origin master 
