--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,13 +36,15 @@ jobs:
       - name: Run tests
         run: pytest
 
-      - name: Generate Janissary backend reports
+      - name: Generate Janissary backend reports with latest record file
         run: |
+          latest_record=$(ls -t test/data/*.aoe2record | head -n 1)
+          echo "Using latest record file: $latest_record"
           mkdir -p output/reports/js/public
-          janissary report test/data/example_v5.8.aoe2record output/report.html
-          janissary command-yaml test/data/example_v5.8.aoe2record output/commands.yaml
-          janissary header-yaml test/data/example_v5.8.aoe2record output/header.haml
-          janissary report --json test/data/example_v5.8.aoe2record output/reports/js/public/devdata.json
+          janissary report "$latest_record" output/report.html
+          janissary command-yaml "$latest_record" output/commands.yaml
+          janissary header-yaml "$latest_record" output/header.haml
+          janissary report --json "$latest_record" output/reports/js/public/devdata.json
 
       - name: Upload backend artifacts
         uses: actions/upload-artifact@v4
@@ -99,4 +101,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add docs
           git commit -m "Update GitHub Pages content in /docs" || echo "No changes to commit"
-          git push origin master 
+          git push origin master
